z-index to fix autocomplete [#97861080]

--- a/app/stylesheets/_search.scss
+++ b/app/stylesheets/_search.scss
@@ -96,6 +96,8 @@
   padding: 0;
   margin: 0;
   list-style-type: none;
+  z-index: 1;
+
   @extend %scrollable-y;
   a {
     @extend %ellipsis;
